apps/django-api/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: django-api
  labels:
    name: django-api
