apps/django-api/service-fixed.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-api-service-fixed
  namespace: django-api
  labels:
    app: django-api-fixed
spec:
  type: ClusterIP
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: django-api-fixed
